feat(urls): make stateful requests, fix relative and absolute paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "baseUrl": ".",
     "incremental": true,
     "downlevelIteration": true,
-    "checkJs": false
+    "checkJs": false,
+    "typeRoots": ["node_modules/@types", "src/types"],
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/types/*.d.ts"]
 }
