--- a/package.json
+++ b/package.json
@@ -9,35 +9,37 @@
     "fetch-source": "yarn t-node src/index.ts"
   },
   "dependencies": {
-    "@types/eslint": "8.4.6",
-    "@types/node": "18.8.4",
-    "axios": "^1.1.2",
-    "concurrently": "^7.4.0",
+    "@types/eslint": "8.4.10",
+    "@types/node": "18.11.17",
+    "@types/yargs": "^17.0.17",
+    "axios": "^1.2.1",
+    "concurrently": "^7.6.0",
     "http-cookie-agent": "^4.0.2",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^20.0.1",
+    "jsdom": "^20.0.3",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4",
-    "validator": "^13.7.0"
+    "typescript": "4.9.4",
+    "validator": "^13.7.0",
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
     "ts-node-dev": "^2.0.0"
   }
