--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "fetch-source": "yarn t-node src/index.ts"
   },
   "dependencies": {
+    "@types/crawler": "^1.2.2",
     "@types/eslint": "8.4.10",
     "@types/node": "18.11.17",
     "@types/yargs": "^17.0.17",
     "axios": "^1.2.1",
     "concurrently": "^7.6.0",
+    "crawler": "^1.3.0",
     "http-cookie-agent": "^4.0.2",
     "husky": "^8.0.2",
     "iconv-lite": "^0.6.3",
