--- a/package.json
+++ b/package.json
@@ -10,38 +10,39 @@
   },
   "dependencies": {
     "@types/crawler": "^1.2.2",
-    "@types/eslint": "8.4.10",
-    "@types/node": "18.11.17",
-    "@types/yargs": "^17.0.17",
-    "axios": "^1.2.1",
+    "@types/eslint": "8.21.1",
+    "@types/node": "18.14.2",
+    "@types/yargs": "^17.0.22",
+    "axios": "^1.3.4",
     "concurrently": "^7.6.0",
-    "crawler": "^1.3.0",
-    "http-cookie-agent": "^4.0.2",
-    "husky": "^8.0.2",
+    "crawler": "^1.4.0",
+    "http-cookie-agent": "^5.0.2",
+    "husky": "^8.0.3",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^20.0.3",
+    "jsdom": "^21.1.0",
+    "mkdirp": "^2.1.3",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
-    "validator": "^13.7.0",
-    "yargs": "^17.6.2"
+    "typescript": "4.9.5",
+    "validator": "^13.9.0",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "ts-node-dev": "^2.0.0"
   }
