--- a/package.json
+++ b/package.json
@@ -1,48 +1,58 @@
 {
   "name": "source-map-cloner",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "license": "MIT",
   "type": "module",
+  "bin": {
+    "source-map-cloner": "dist/index.js"
+  },
   "scripts": {
+    "build": "tsc",
     "t-node": "node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm/transpile-only",
     "type-check": "tsc --noEmit",
     "fetch-source": "yarn t-node src/index.ts"
   },
+  "files": [
+    "tsconfig.json",
+    "src",
+    "dist",
+    "README.md"
+  ],
   "dependencies": {
     "@types/crawler": "^1.2.2",
-    "@types/eslint": "8.21.1",
-    "@types/node": "18.14.6",
-    "@types/yargs": "^17.0.22",
-    "axios": "^1.3.4",
-    "concurrently": "^7.6.0",
+    "@types/eslint": "8.37.0",
+    "@types/node": "20.1.1",
+    "@types/yargs": "^17.0.24",
+    "axios": "^1.4.0",
+    "concurrently": "^8.0.1",
     "crawler": "^1.4.0",
     "http-cookie-agent": "^5.0.2",
     "husky": "^8.0.3",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^21.1.0",
-    "mkdirp": "^2.1.4",
+    "jsdom": "^22.0.0",
+    "mkdirp": "^3.0.1",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5",
+    "typescript": "5.0.4",
     "validator": "^13.9.0",
-    "yargs": "^17.7.1"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "ts-node-dev": "^2.0.0"
   }
