--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
+    "user-agents": "^1.0.1374",
     "validator": "^13.9.0",
     "yargs": "^17.7.2"
   },
