--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "mkdirp": "^3.0.1",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
+    "source-map-consumer": "^0.8.0",
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
     "user-agents": "^1.0.1374",
     "validator": "^13.9.0",
+    "vm2": "^3.9.17",
+    "winston": "^3.8.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
