--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@types/user-agents": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/eslint-plugin-tslint": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
