feat(scripts): run scripts

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "@types/crawler": "^1.2.2",
     "@types/eslint": "8.37.0",
-    "@types/node": "20.1.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "20.1.2",
     "@types/yargs": "^17.0.24",
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "crawler": "^1.4.0",
+    "dom-parser": "^0.1.6",
     "http-cookie-agent": "^5.0.2",
     "husky": "^8.0.3",
     "iconv-lite": "^0.6.3",
@@ -37,7 +39,7 @@
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
-    "user-agents": "^1.0.1374",
+    "user-agents": "^1.0.1375",
     "validator": "^13.9.0",
     "vm2": "^3.9.17",
     "winston": "^3.8.2",
