--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   ],
   "dependencies": {
     "@types/crawler": "^1.2.2",
-    "@types/eslint": "8.44.0",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "20.4.1",
+    "@types/eslint": "8.44.2",
+    "@types/jsdom": "^21.1.2",
+    "@types/node": "20.5.6",
     "@types/yargs": "^17.0.24",
-    "axios": "^1.4.0",
-    "concurrently": "^8.2.0",
+    "axios": "^1.5.0",
+    "concurrently": "^8.2.1",
     "crawler": "^1.4.0",
     "dom-parser": "^0.1.6",
     "http-cookie-agent": "^5.0.4",
@@ -33,33 +33,34 @@
     "iconv-lite": "^0.6.3",
     "jsdom": "^22.1.0",
     "mkdirp": "^3.0.1",
+    "p-map": "^6.0.0",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
     "source-map-consumer": "^0.8.0",
     "source-map-js": "^1.0.2",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "user-agents": "^1.0.1434",
-    "validator": "^13.9.0",
+    "typescript": "5.2.2",
+    "user-agents": "^1.0.1444",
+    "validator": "^13.11.0",
     "vm2": "^3.9.19",
-    "winston": "^3.9.0",
+    "winston": "^3.10.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/user-agents": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.2",
     "pretty-quick": "^3.1.3",
     "ts-node-dev": "^2.0.0"
   }
