feat: types, clean up implementation, support http2 with got

--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "t-node": "node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm/transpile-only",
     "type-check": "tsc --noEmit",
-    "fetch-source": "yarn t-node src/index.ts"
+    "fetch-source": "yarn tsx src/index.ts"
   },
   "files": [
     "tsconfig.json",
@@ -19,49 +18,55 @@
     "README.md"
   ],
   "dependencies": {
-    "@types/crawler": "^1.2.2",
-    "@types/eslint": "8.44.2",
-    "@types/jsdom": "^21.1.2",
-    "@types/node": "20.5.6",
-    "@types/yargs": "^17.0.24",
-    "axios": "^1.5.0",
-    "concurrently": "^8.2.1",
-    "crawler": "^1.4.0",
-    "dom-parser": "^0.1.6",
-    "http-cookie-agent": "^5.0.4",
-    "husky": "^8.0.3",
+    "@eslint/compat": "^1.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
+    "@types/crawler": "^1.2.6",
+    "@types/eslint": "8.56.10",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "20.14.6",
+    "@types/yargs": "^17.0.32",
+    "axios": "^1.7.2",
+    "concurrently": "^8.2.2",
+    "crawler": "^2.0.0",
+    "dom-parser": "^1.1.5",
+    "globals": "^15.6.0",
+    "got": "^14.4.1",
+    "http-cookie-agent": "^6.0.5",
+    "husky": "^9.0.11",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^22.1.0",
+    "jsdom": "^24.1.0",
     "mkdirp": "^3.0.1",
-    "p-map": "^6.0.0",
+    "p-map": "^7.0.2",
     "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.4",
     "source-map-consumer": "^0.8.0",
-    "source-map-js": "^1.0.2",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "user-agents": "^1.0.1444",
-    "validator": "^13.11.0",
+    "source-map-js": "^1.2.0",
+    "tsx": "^4.15.6",
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "user-agents": "^1.1.240",
+    "validator": "^13.12.0",
     "vm2": "^3.9.19",
-    "winston": "^3.10.0",
+    "winston": "^3.13.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/user-agents": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/user-agents": "^1.0.4",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.2",
-    "pretty-quick": "^3.1.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "pretty-quick": "^4.0.0",
     "ts-node-dev": "^2.0.0"
   }
 }
