--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+ucu
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -205,5 +205,8 @@ cupcake
 www.*
 location.westernunion.com
 finder.porsche.com
-venture.angellist.com
+angel*
+*angel*
 *.com
+civit
+suno
