--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0-development",
   "license": "MIT",
   "type": "module",
-  "bin": {
-    "source-map-cloner": "dist/cli.js"
-  },
+  "bin": "dist/cli.js",
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
@@ -18,55 +16,56 @@
     "README.md"
   ],
   "dependencies": {
-    "@eslint/compat": "^1.2.3",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.15.0",
-    "@types/crawler": "^1.2.6",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.33.0",
+    "@types/crawler": "^1.2.7",
     "@types/eslint": "9.6.1",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "22.9.1",
+    "@types/node": "24.2.1",
     "@types/yargs": "^17.0.33",
-    "axios": "^1.7.7",
-    "concurrently": "^9.1.0",
+    "axios": "^1.11.0",
+    "concurrently": "^9.2.0",
     "crawler": "^2.0.2",
     "dom-parser": "^1.1.5",
-    "globals": "^15.12.0",
-    "got": "^14.4.4",
-    "http-cookie-agent": "^6.0.6",
+    "globals": "^16.3.0",
+    "got": "^14.4.7",
+    "http-cookie-agent": "^7.0.2",
     "husky": "^9.1.7",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.1.0",
     "mkdirp": "^3.0.1",
-    "p-map": "^7.0.2",
+    "p-map": "^7.0.3",
     "skip-postinstall": "^1.0.0",
-    "source-map": "^0.7.4",
+    "source-map": "^0.7.6",
     "source-map-consumer": "^0.8.0",
     "source-map-js": "^1.2.1",
-    "tsx": "^4.19.2",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "user-agents": "^1.1.364",
-    "validator": "^13.12.0",
+    "tsx": "^4.20.3",
+    "typescript": "5.9.2",
+    "typescript-eslint": "^8.39.0",
+    "user-agents": "^1.1.626",
+    "validator": "^13.15.15",
     "vm2": "^3.9.19",
     "winston": "^3.17.0",
-    "yargs": "^17.7.2"
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
     "@types/user-agents": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
-    "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "pretty-quick": "^4.0.0",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
     "ts-node-dev": "^2.0.0"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
