--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.0.0-development",
   "license": "MIT",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": "dist/cli.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "fetch-source": "yarn tsx src/cli.ts"
+    "fetch-source": "tsx src/cli.ts"
   },
   "files": [
     "tsconfig.json",
@@ -16,14 +24,6 @@
     "README.md"
   ],
   "dependencies": {
-    "@eslint/compat": "^1.3.2",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.33.0",
-    "@types/crawler": "^1.2.7",
-    "@types/eslint": "9.6.1",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "24.2.1",
-    "@types/yargs": "^17.0.33",
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
     "crawler": "^2.0.2",
@@ -40,9 +40,6 @@
     "source-map": "^0.7.6",
     "source-map-consumer": "^0.8.0",
     "source-map-js": "^1.2.1",
-    "tsx": "^4.20.3",
-    "typescript": "5.9.2",
-    "typescript-eslint": "^8.39.0",
     "user-agents": "^1.1.626",
     "validator": "^13.15.15",
     "vm2": "^3.9.19",
@@ -50,7 +47,15 @@
     "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.3.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.33.0",
+    "@types/crawler": "^1.2.7",
+    "@types/eslint": "9.6.1",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "24.2.1",
     "@types/user-agents": "^1.0.4",
+    "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
     "@typescript-eslint/parser": "^8.39.0",
@@ -65,7 +70,10 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
+    "typescript": "5.9.2",
+    "typescript-eslint": "^8.39.0"
   },
   "packageManager": "yarn@4.9.2"
 }
