--- a/.gitignore
+++ b/.gitignore
@@ -188,30 +188,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
-lange
-chime
-cote
-sites
-cote2
-cote3
-top-1m*
-1k.csv
-myfico
-www.ign.com
-angel
-hulu
-cupcake
-www.*
-location.westernunion.com
-finder.porsche.com
-angel*
-*angel*
-*.com
-civit
-suno
-blind
-blind*
-panda*
-juce*
-lc*
+runs/*
