--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
-      - run: yarn install --frozen-lockfile
+          node-version: latest
+      - run: yarn install --immutable
       - run: yarn build
       - run: npx semantic-release --branches main
         env:
