--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "bin": "dist/cli.js",
+  "bin": "dist/cli/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "fetch-source": "tsx src/cli.ts"
+    "fetch-source": "tsx src/cli/index.ts"
   },
   "files": [
     "tsconfig.json",
@@ -68,5 +68,8 @@
     "typescript": "5.9.2",
     "typescript-eslint": "^8.39.0"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "workspaces": [
+    "webapp"
+  ]
 }
