--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,7 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "source-map-cloner": "workspace:*",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
