formatters and types

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "scripts": {
     "build": "tsc",
-    "typecheck": "tsc --noEmit",
-    "fetch-source": "tsx src/cli/index.ts"
+    "format:check": "prettier --check . --cache",
+    "format:write": "prettier --write . --cache",
+    "typecheck": "tsc --noEmit && yarn workspace webapp typecheck",
+    "fetch-source": "tsx src/cli/index.ts",
+    "dev-webapp": "yarn workspace webapp dev"
   },
   "files": [
     "tsconfig.json",
@@ -25,18 +28,14 @@
   ],
   "dependencies": {
     "crawler": "^2.0.2",
-    "globals": "^16.3.0",
     "got": "^14.4.7",
     "iconv-lite": "^0.6.3",
     "jsdom": "^26.1.0",
     "mkdirp": "^3.0.1",
     "p-map": "^7.0.3",
-    "skip-postinstall": "^1.0.0",
     "source-map": "^0.7.6",
-    "source-map-js": "^1.2.1",
     "user-agents": "^1.1.626",
     "vm2": "^3.9.19",
-    "winston": "^3.17.0",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
@@ -63,7 +62,6 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
-    "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.3",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.39.0"
@@ -71,5 +69,11 @@
   "packageManager": "yarn@4.9.2",
   "workspaces": [
     "webapp"
-  ]
+  ],
+  "prettier": {
+    "printWidth": 120,
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
+  }
 }
