--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,8 +7,6 @@
     "build": "next build",
     "check": "next lint && tsc --noEmit",
     "dev": "next dev --turbo",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -22,11 +20,15 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/jszip": "^3.4.1",
+    "@types/tough-cookie": "^4.0.5",
+    "jszip": "^3.10.1",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "source-map-cloner": "workspace:*",
     "superjson": "^2.2.1",
+    "tough-cookie": "^5.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
