--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./cli": {
+      "import": "./dist/cli/index.js",
+      "types": "./dist/cli/index.d.ts"
+    },
+    "./fetchers": {
+      "import": "./dist/fetchers/index.js",
+      "types": "./dist/fetchers/index.d.ts"
     }
   },
   "scripts": {
