--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
@@ -23,9 +24,11 @@
     "@types/jszip": "^3.4.1",
     "@types/tough-cookie": "^4.0.5",
     "jszip": "^3.10.1",
+    "monaco-editor": "^0.52.2",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-file-tree": "^0.0.8",
     "source-map-cloner": "workspace:*",
     "superjson": "^2.2.1",
     "tough-cookie": "^5.1.2",
