fix imports and exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "outDir": "dist",
     "noImplicitAny": true,
     "experimentalDecorators": true,
+    "allowImportingTsExtensions": true,
     "emitDecoratorMetadata": true,
     "isolatedModules": true,
     "baseUrl": ".",
