--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -3,6 +3,7 @@
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
     "target": "es2022",
     "allowJs": true,
     "resolveJsonModule": true,
