--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,34 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "lib": ["esnext", "dom"],
-    "allowJs": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    /* Base Options: */
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "target": "ES2023",
+    "allowJs": true,
     "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    /* Strictness */
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+
+    /* Bundled projects */
+    "lib": ["dom", "dom.iterable", "ES2023"],
+    "noEmit": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "jsx": "preserve",
+    "plugins": [{ "name": "next" }],
+    "incremental": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "noImplicitAny": true,
     "experimentalDecorators": true,
-    "allowImportingTsExtensions": true,
     "emitDecoratorMetadata": true,
-    "isolatedModules": true,
     "baseUrl": ".",
-    "incremental": true,
     "downlevelIteration": true,
     "declaration": true,
     "checkJs": true
