--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "declaration": true,
     "checkJs": true
   },
-  "include": ["src/**/*.ts", "src/types/*.d.ts"]
+  "include": ["src/**/*.ts", "src/types/*.d.ts", "*.mjs"]
 }
