--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
